# wres-explorer

./: .gitignore  README.md  main.py  pyproject.toml
src/wres/explorer/: callbacks.py  cli.py  dashboard.py  data.py  images.py  layout.py  plots.py  widgets.py
src/wres/plotter/: cli.py  data.py
